correctly shift x-axis labels on priority matrix 5 px to right

--- a/act-math-mern-app/client/src/components/PriorityMatrix.css
+++ b/act-math-mern-app/client/src/components/PriorityMatrix.css
@@ -156,9 +156,9 @@
   position: absolute;
   bottom: -15px;
 }
-.x-axis span:nth-child(1) { left: 0; transform: translateX(-50%); bottom: -25px}
-.x-axis span:nth-child(2) { left: var(--accuracy-threshold); transform: translateX(-50%); bottom: -25px}
-.x-axis span:nth-child(3) { right: 15; transform: translateX(50%); bottom: -25px}
+.x-axis span:nth-child(1) { left: 5px; transform: translateX(-50%); bottom: -25px}
+.x-axis span:nth-child(2) { left: calc(var(--accuracy-threshold) + 5px); transform: translateX(-50%); bottom: -25px}
+.x-axis span:nth-child(3) { right: -5px; transform: translateX(50%); bottom: -25px}
 
 .y-axis-label {
   position: absolute;
